tests/error/errors_on_usage/and_not_defined.err
Error: Variable not defined (at $FILE:9:15)
  | 
7 |         return z
8 |     else:
9 |         return z
  |                ^ `z` might be undefined ...

Note:
  | 
5 | def foo(x: bool, y: int) -> int:
6 |     if x and (z := y + 1):
  |        - ... if this expression is `False`

Guppy compilation failed due to 1 previous error
